# AI-EVIL-BY-ALAND

./: .gitignore  CLOUD_TRAINING.md  LAPORAN.md  PROGRESS.md  README.md  caratrainai.md  colab_500M.ipynb  colab_finetune.ipynb  control.py  hasilakhirtrain.md  index.html  setup.sh  setup_cloud.sh
.github/workflows/: auto-train.yml  continuous-train.yml  scrape-dataset.yml
aland-ai/: aland-ai  aland_ai.py  pyproject.toml
aland-ai/training/: continuous_train.py  dataset-metadata.json  gen_bulk.py  gen_dataset.py  gen_extra.py  scraper.py  train.py  train_cloud.py
backend/: package-lock.json  package.json  server.js
frontend/: index.html
kaggle_kernel/: kernel-metadata.json  kernel.ipynb
